Added my model test based to Lucas

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /SpaceInvaderCG-LucasScaraveli-Example/nbproject/private/
 /SpaceInvaderCG-LucasScaraveli-Example/build/
+/SpaceInvaderCG-LucasScaraveli-Prova/nbproject/private/
+/SpaceInvaderCG-LucasScaraveli-Prova/build/
