Started the project and included some objects

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 /SpaceInvaderCG-LucasScaraveli-Example/build/
 /SpaceInvaderCG-LucasScaraveli-Prova/nbproject/private/
 /SpaceInvaderCG-LucasScaraveli-Prova/build/
+/ProjetoM2/Boot/build/
+/ProjetoM2/Boot/nbproject/private/
+/ProjetoM2/Doorbject/build/
+/ProjetoM2/Doorbject/nbproject/private/
